# apl-libs

./: .gitignore  AUTHORS  Changelog.md  DEPENDENCIES.txt  Makefile.am  NEWS  README.md  README.org  configure.ac  guix.scm
doc/: apl-libs.texi
workspaces/: Comparison.apl  TEST.apl  Utils.apl
